--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@
 	#header
 	{
 		position: relative;
-		background: #ddd url(../images/header.jpg) no-repeat center;
+		background: #ddd url(/images/dna.jpg) no-repeat center;
 		background-size: cover;
 	}
 
